Made a test change

--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
 
         <h2>Experience</h2>
         <h3>iCode teaching</h3>
-        <p>Taught programming and computer skills at iCode, including web programming using HTML, CSS, JavaScript, and SQL, game development in Unreal engine, programming in Java and Python, and more. Experienced in a programming-based work environment requiring problem solving, communication, and following a schedule.</p>
+        <p>Taught programming and computer skills at iCode, including web programming using HTML, CSS, JavaScript, and SQL, game development in Unreal engine, programming in Java and Python, and more.</p>
         <hr>
 
         <h2>Contact</h2>
         <ul>
             <li><a href="https://github.com/Bubadabado">Github</a></li>
         </ul>
-
     </body>
 </html>
