--- a/index.html
+++ b/index.html
@@ -2,42 +2,21 @@
 <html>
     <head>
         <title>Adam's Portfolio site</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <h1>Portfolio</h1>
-        <p>This is Adam's CS 260 portfolio site.</p>
-        <hr>
-
-        <h2>About</h2>
-        <p>Hello, my name is Adam Robertson. Here are some of my hobbies:</p>
-        <ul>
-            <li>Programming</li>
-            <li>Art</li>
-            <li>Video and board games</li>
-            <li>Reading</li>
-            <li>Rollerblading</li>
-            <li><a href="https://en.wikipedia.org/wiki/Cardistry">Cardistry</a></li>
+        <ul class="navigation">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
-        <hr>
 
-        <h2>Projects</h2>
-        <p>Here are some of my projects that I've worked on:</p>
-        <ul>
-            <li><a href="https://bubadabado.itch.io/">Some old game jams</a></li>
-            <li>Galaxy generation algorithm</li>
-            <li>Computer generated art</li>
-            <li>Various other art projects</li>
-        </ul>
-        <hr>
-
-        <h2>Experience</h2>
-        <h3>iCode teaching</h3>
-        <p>Taught programming and computer skills at iCode, including web programming using HTML, CSS, JavaScript, and SQL, game development in Unreal engine, programming in Java and Python, and more.</p>
-        <hr>
-
-        <h2>Contact</h2>
-        <ul>
-            <li><a href="https://github.com/Bubadabado">Github</a></li>
-        </ul>
+        <div class="content-container">
+            <h2>Home</h2>
+            <p>This is Adam's CS 260 portfolio site.</p>
+        </div>
     </body>
 </html>
