updated site style and added responsiveness

--- a/about.html
+++ b/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset='UTF-8'/>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/>
         <title>Adam's Portfolio site</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
@@ -14,17 +16,75 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
 
-        <div class="content-container">
-            <h2>About</h2>
-            <p>Hello, my name is Adam Robertson. Here are some of my hobbies:</p>
-            <ul>
-                <li>Programming</li>
-                <li>Art</li>
-                <li>Video and board games</li>
-                <li>Reading</li>
-                <li>Rollerblading</li>
-                <li><a href="https://en.wikipedia.org/wiki/Cardistry">Cardistry</a></li>
-            </ul>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-header">
+                    <h2>About</h2>
+                </div>
+                <div class="card-content">
+                    <p>Hello, my name is Adam Robertson. Here are some of my hobbies:</p>
+                    <ul>
+                        <li>Programming</li>
+                        <li>Art</li>
+                        <li>Video and board games</li>
+                        <li>Reading</li>
+                        <li>Rollerblading</li>
+                        <li><a href="https://en.wikipedia.org/wiki/Cardistry">Cardistry</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <h2>Programming</h2>
+                </div>
+                <div class="card-content">
+                    <p>I've been programming for around 7 years. Most of my work has been on personal game development projects.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <h2>Art</h2>
+                </div>
+                <div class="card-content">
+                    <p>In my free time I enjoy various forms of art. Some of my favorites are sketching (both with pencil and digitally), pixel art, and writing programs to generate art. Here are some simple examples of computer generated art:</p>
+                    <img src="http://adamrobertson.us/portfolio/assets/noisewave15.png">
+                    <img src="http://adamrobertson.us/portfolio/assets/noiseWave17.png">
+                    <img src="http://adamrobertson.us/portfolio/assets/noisewave10.png">
+                    <img src="http://adamrobertson.us/portfolio/assets/noisewave9.png">
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <h2>Video and Board Games</h2>
+                </div>
+                <div class="card-content">
+                    <p>I love to play video games and board games. At the moment some of my favorite video games are Risk of Rain 2, Super Smash Bros. Ultimate, and Dark Souls II. I also enjoy board games, with my favorites being Go, Shogi, Pente, and Bananagrams.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <h2>Reading</h2>
+                </div>
+                <div class="card-content">
+                    <p>I also enjoy reading in my free time. My favorite book is Battlefield Earth by L. Ron Hubbard. Most recently I'm reading Words of Radiance by Brandon Sanderson.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <h2>Rollerblading</h2>
+                </div>
+                <div class="card-content">
+                    <p>I also enjoy rollerblading with friends, typically at a parking garage or skate park.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <h2>Cardistry</h2>
+                </div>
+                <div class="card-content">
+                    <p>I have been doing <a href="https://en.wikipedia.org/wiki/Cardistry">cardistry</a> for a few years now, and enjoy practicing new things.</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
