--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset='UTF-8'/>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/>
         <title>Adam's Portfolio site</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
@@ -14,11 +16,17 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
 
-        <div class="content-container">
-            <h2>Contact</h2>
-            <ul>
-                <li><a href="https://github.com/Bubadabado">Github</a></li>
-            </ul>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-header">
+                    <h2>Contact</h2>
+                </div>
+                <div class="card-content">
+                    <ul>
+                        <li><a href="https://github.com/Bubadabado">Github</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </body>
 </html>
