--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Adam's Portfolio site</title>
+        <meta charset='UTF-8'/>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/>
+        <title>Xerophyte</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
@@ -14,9 +16,15 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
 
-        <div class="content-container">
-            <h2>Home</h2>
-            <p>This is Adam's CS 260 portfolio site.</p>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-header">
+                    <h2>Home</h2>
+                </div>
+                <div class="card-content">
+                    <p>This is Adam's CS 260 portfolio site.</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
