--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset='UTF-8'/>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/>
         <title>Adam's Portfolio site</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
@@ -14,15 +16,21 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
 
-        <div class="content-container">
-            <h2>Projects</h2>
-            <p>Here are some of my projects that I've worked on:</p>
-            <ul>
-                <li><a href="https://bubadabado.itch.io/">Some old game jams</a></li>
-                <li>Galaxy generation algorithm</li>
-                <li>Computer generated art</li>
-                <li>Various other art projects</li>
-            </ul>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-header">
+                    <h2>Projects</h2>
+                </div>
+                <div class="card-content">
+                    <p>Here are some of my projects that I've worked on:</p>
+                    <ul>
+                        <li><a href="https://bubadabado.itch.io/">Some old game jams</a></li>
+                        <li>Galaxy generation algorithm</li>
+                        <li>Computer generated art</li>
+                        <li>Various other art projects</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </body>
 </html>
