--- a/experience.html
+++ b/experience.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset='UTF-8'/>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/>
         <title>Adam's Portfolio site</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
@@ -14,10 +16,16 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
 
-        <div class="content-container">
-            <h2>Experience</h2>
-            <h3>iCode teaching</h3>
-            <p>Taught programming and computer skills at iCode, including web programming using HTML, CSS, JavaScript, and SQL, game development in Unreal engine, programming in Java and Python, and more.</p>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-header">
+                    <h2>Experience</h2>
+                </div>
+                <div class="card-content">
+                    <h3>iCode teaching</h3>
+                    <p>Taught programming and computer skills at iCode, including web programming using HTML, CSS, JavaScript, and SQL, game development in Unreal engine, programming in Java and Python, and more.</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
